# PRIR

./: .gitignore  CMakeLists.txt  README.md
PRIR-zadanie2/src/: CellNeighbourhood.java  Explorer.java  ExploringMode.java  LockingTable2D.java  MoveDirection.java  ParallelExplorer.java  PositionHelper.java  ThreadsFactory.java
openMpTests/: test1.cpp
zadanie1/: Function.cpp  Function.h  Main.cpp  MathHelper.cpp  ParallelSwarm.cpp  ParallelSwarm.h  SequentialSwarm.cpp  SequentialSwarm.h  SimpleAntenna.cpp  SimpleAntenna.h  SimpleExpFunction.cpp  Swarm.h  consts.h
zadanie2/: Pair.java  Table2D.java  ThreadAndPosition.java
zadanie2/src/: CellNeighbourhood.java  Explorer.java  ExtendedLoggingThreadsFactory.java  Main.java  MoveDirection.java  ParallelExplorer.java  Position2D.java  PositionHelper.java  Table2D.java  Table2DImpl.java
zadanie3/: Antenna.cpp  Antenna.h  Function.cpp  Main.cpp  MathHelper.h  ParallelSwarm.cpp  ParallelSwarm.h  SequentialSwarm.cpp  SequentialSwarm.h  SimpleExpFunction.cpp  SimpleExpFunction.h  Swarm.cpp  Swarm.h  comparer.sh  consts.h  test_all.sh
